--- a/resources/assets/admin/app.css
+++ b/resources/assets/admin/app.css
@@ -105,3 +105,5 @@ table thead th{white-space: nowrap}
 	background-color: #f6c9cc !important;
 	border-color: #f1acb1 !important;
 }
+
+pre{white-space: pre-wrap;}
