--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -10,3 +10,4 @@
 @import "~icheck/skins/all.css";
 @import "~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.css";
 @import "~admin-lte/build/scss/AdminLTE";
+@import "~admin-lte/plugins/daterangepicker/daterangepicker.css";
