--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -6,6 +6,7 @@
 @import "~admin-lte/plugins/select2-bootstrap4-theme/select2-bootstrap4.css";
 @import "~admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.css";
 @import "~admin-lte/plugins/toastr/toastr.css";
+@import "~summernote/dist/summernote-bs4.css";
 @import "~nprogress/nprogress.css";
 @import "~icheck/skins/all.css";
 @import "~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.css";
